--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="static/htmx.min.js"></script>
-    <title>GO/HTMX Messages</title>
+    <title>Go/HTMX Messages</title>
 </head>
 <body>
     <header>
