query list of conversations

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="static/htmx.min.js"></script>
     <title>Go/HTMX Messages</title>
 </head>
+
 <body>
     <header>
         <h1>Go/HTMX Messages</h1>
     </header>
     <main>
+        <div hx-get="/conversations" hx-trigger="load" hx-swap="outerHTML">
+            Loading conversations...
+        </div>
         <div hx-get="/messages" hx-trigger="load" hx-swap="outerHTML">
             Loading messages...
         </div>
     </main>
 </body>
+
 </html>
